# computer_graphics_assignments

./: sample report.pages
Assignment01_2013060 2/CgPaint/: CMakeCache.txt  CMakeLists.txt  CgPaint  Circle.cpp  Circle.h  Line.cpp  Line.h  Makefile  Shader.cpp  Shader.h  Shape.cpp  Shape.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  cmake_install.cmake  main.cpp  pen.cpp  pen.h  vertexShader.glsl
Assignment02_2013060 2/Assignment02/: Assignment02  Bezier.cpp  Bezier.h  CMakeCache.txt  CMakeLists.txt  InterpolationCurve.cpp  InterpolationCurve.h  Line.cpp  Line.h  Makefile  PiecewiseBezier.cpp  PiecewiseBezier.h  Shader.cpp  Tangent.cpp  cmake_install.cmake  fragmentShader.glsl  main.cpp  pen.cpp  pen.h
Assignment03_2013060/Assignment03_code/: Makefile  assignment03  gl_utils.cpp  main.cpp
Assignment04_2013060/Assignment04_code/: assignment03  fshader.fs  fshader_p.fs  main.cpp  vshader.vs  vshader_p.vs
